# FederatedLearningDiabetesDetection

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  deploy.py  hosts.yml  pyproject.toml  render.sh
.github/workflows/: docker-build.yml  main.yml
ansible/: playbook-build.yml  playbook-cleanup.yml  playbook-client.yml  playbook-local.yml  playbook-server.yml
ansible/group_vars/: all.yml
ansible/roles/client/defaults/: main.yml
ansible/roles/client/tasks/: main.yml
ansible/roles/client/templates/: compose.yml.j2
ansible/roles/common/tasks/: main.yml
ansible/roles/local/tasks/: main.yml
ansible/roles/local/templates/: pyproject.toml.j2
ansible/roles/server/defaults/: main.yml
ansible/roles/server/tasks/: main.yml
ansible/roles/server/templates/: compose.yml.j2  pyproject.base.toml.j2  pyproject.flwr.toml.j2
distributed/: certs.yml
distributed/client/: Dockerfile.clientapp  Dockerfile.streamlit  compose.yml  gen-dirs.yml  mini_predict.py  start_client.sh  ui_client.py
distributed/client/data/: data-1.parquet  data-2.csv  data-2.parquet  data-3.csv  data-3.parquet  evaluate.py
distributed/server/: Dockerfile.serverapp  compose.yml  gen-state.yml  ui_server.py
flower_nih/: Dockerfile  client_app.py  prometheus.yml  requirements.txt  server_app.py  streamlit_app.py  task.py  tests.py
k8s/: clientapp.yaml  serverapp.yaml  superlink.yaml  supernode.yaml
