[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flower-nih"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.18.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "scikit-learn"
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flower"

[tool.flwr.app.components]
serverapp = "flower_nih.server_app:app"
clientapp = "flower_nih.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
fraction-fit = 1.0
fraction-evaluate = 0.5
local-epochs = 3
learning-rate = 0.1
batch-size = 16

[tool.flwr.federations]
default = "local-deployment"

[tool.flwr.federations.local-deployment]
address = "100.78.235.15:9093"
root-certificates = "./distributed/superlink-certificates/ca.crt"
