[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flower-nih"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr>=1.18.0"
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flower"

[tool.flwr.app.components]
serverapp = "flower_nih.server_app:app"
clientapp = "flower_nih.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 20
fraction-fit = 1.0
learning-rate = 0.01
fraction-evaluate = 1.0
local-epochs = 2
batch-size = 16

[tool.flwr.federations]
default = "local-deployment"

[tool.flwr.federations.local-deployment]
address = "100.78.235.15:9093"
root-certificates = "./distributed/superlink-certificates/ca.crt"
